<resources>
    <string name="app_name">Cut</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="inbox">Inbox</string>
    <string name="share">Share</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="settings">settings</string>
    <string name="share_button">Share Button</string>
    <string name="messages_button">Messages Button</string>
    <string name="profile_button">Profile Button</string>
    <string name="inbox_button">Inbox Button</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="placeholder">placeholder</string>
    <string name="pass">Pass</string>
    <string name="message">Message</string>
    <string name="past_notifications">Past Notifications</string>
    <string name="active_notifications">Active Notifications</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="share_status">Share Status</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="log_in_button">log in button</string>
    <string name="sign_up_for_cut">Sign up for Cut</string>
    <string name="create_a_profile">Create a profile, follow other accounts, push your own notifications, and more.</string>
    <string name="next">Next</string>
    <string name="use_phone_or_email">Use phone or email</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="log_in_to_cut">Log in to Cut</string>
    <string name="manage_your">Manage your account, check notifications, start chats, and more</string>
    <string name="use_phone_email_username">Use phone / email / username</string>
    <string name="new_group">New Group</string>
    <string name="add">Add</string>
    <string name="name_group_optional">Name group (optional)</string>
    <string name="suggested">Suggested</string>
    <string name="create">Create</string>
    <string name="send_location">Send Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="shared_pref">Shared Preferences</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_button">Sign up button</string>
    <string name="sign_up">Sign up</string>
    <string name="phone">Phone</string>
</resources>