<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgSettings"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:background="@drawable/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/settings" />

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/profile_circle"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgSettings" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/imgProfile"
        app:layout_constraintTop_toTopOf="@id/imgProfile"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/txtActiveNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_notifications"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgProfile"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:maxHeight="300dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/txtActiveNot"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>