<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".views.home.MainActivity">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mainFragment"
            android:name="com.example.cut.views.home.InboxFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/menuBorder"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout="@layout/fragment_inbox" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menuBorder"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dark_gray"
            app:layout_constraintBottom_toTopOf="@id/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/lytInbox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/lytShare"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/btnTrack"
                    android:layout_width='30dp'
                    android:layout_height="30dp"
                    android:background="@drawable/inbox"
                    android:contentDescription="@string/inbox_button"/>

                <TextView
                    android:id="@+id/txtInbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/inbox"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lytShare"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/lytMessages"
                app:layout_constraintStart_toEndOf="@+id/lytInbox">

                <Button
                    android:id="@+id/btnShare"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/share"
                    android:contentDescription="@string/share_button"/>

                <TextView
                    android:id="@+id/txtShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/share"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lytMessages"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/lytProfile"
                app:layout_constraintStart_toEndOf="@+id/lytShare">

                <Button
                    android:id="@+id/btnMessages"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/messages"
                    android:contentDescription="@string/messages_button"/>

                <TextView
                    android:id="@+id/txtMessages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/messages"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lytProfile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lytMessages">

                <Button
                    android:id="@+id/btnProfile"
                    android:layout_width='30dp'
                    android:layout_height="30dp"
                    android:background="@drawable/profile"
                    android:contentDescription="@string/profile_button"
                    />

                <TextView
                    android:id="@+id/txtProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/profile"
                    android:textColor="@color/black" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>