<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>
    <ImageView
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:background="@drawable/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/settings" />
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:maxHeight="300dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/notifications"
        app:layout_constraintBottom_toTopOf="@id/pastNotifications"/>

    <TextView
        android:id="@+id/pastNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/past_notifications"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_view"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <ListView
        android:id="@+id/list_view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/pastNotifications"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>