<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".views.home.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/menuBorder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txtLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                android:text="@string/log_in_to_cut"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtManageAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtLogIn"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/manage_your"
                android:textAlignment="center"
                android:textColor="@color/dark_gray" />


            <Button
                android:id="@+id/btnUsePhone"
                android:layout_width='0dp'
                android:background="@drawable/border_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="wrap_content"
                android:contentDescription="@string/log_in_button"
                android:text="@string/use_phone_email_username"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/txtManageAccount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"/>

            <ImageView
                android:layout_marginStart="25dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintTop_toTopOf="@id/btnUsePhone"
                app:layout_constraintBottom_toBottomOf="@id/btnUsePhone"
                app:layout_constraintStart_toStartOf="@id/btnUsePhone"
                android:background="@drawable/user"/>


            <Button
                android:id="@+id/bntContinue"
                android:layout_width='0dp'
                android:background="@drawable/border_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                app:icon="@drawable/google_border"
                android:layout_height="wrap_content"
                android:contentDescription="@string/log_in_button"
                android:text="Continue with Google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/btnUsePhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">


            </Button>

            <ImageView
                android:layout_marginStart="25dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintTop_toTopOf="@id/bntContinue"
                app:layout_constraintBottom_toBottomOf="@id/bntContinue"
                app:layout_constraintStart_toStartOf="@id/bntContinue"
                android:background="@drawable/google"/>




        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menuBorder"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dark_gray"
            app:layout_constraintBottom_toTopOf="@id/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/lytProfile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <TextView
                    android:id="@+id/txtAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btnProfile"
                    android:layout_width='55dp'
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_height="wrap_content"
                    android:background="@color/light_gray"
                    android:contentDescription="@string/log_in_button"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/green" />



            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>